@@ -612,6 +612,12 @@ Rcpp::CharacterVector runit_unique_ch(Rcpp::CharacterVector x) {
 }
 
 // [[Rcpp::export]]
+Rcpp::CharacterVector runit_sort_unique_ch(Rcpp::CharacterVector x,
+                                           bool decreasing = false) {
+    return Rcpp::sort_unique(x, decreasing);
+}
+
+// [[Rcpp::export]]
 IntegerVector runit_table( CharacterVector x){
     return table( x ) ;
 }
