@@ -1,3 +1,9 @@
+2019-03-20  James J Balamuta  <balamut2@illinois.edu>
+
+  * inst/include/Rcpp/sugar/functions/unique.h: Added decreasing parameter to control sort.
+	* inst/unitTests/runit.sugar.R: Added sort_unique() tests
+	* inst/unitTests/cpp/sugar.cpp: Ditto
+
 2019-03-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/date.cpp: Renamed from Date.cpp
